<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_police_label">Requires Police</string>
    <string name="crime_police_text">CLICK TO \nCONTACT \nPOLICE</string>
    <string name="crime_time_button">SELECT A TIME</string>
    <string name="crime_date_button">SELECT A DATE</string>
    <string name="new_crime">New Crime</string>

    <string name="no_crimes">There are no crimes.</string>

</resources>